加入了影片海报信息和影片类型等编辑功能和在线预览